<resources>
    <string name="app_name">Quiz</string>
    <string name="question1">Who owns Android?</string>
    <string name="question2">Where is Google HQ?</string>
    <string name="question3">Which is Android\'s programming language?</string>
    <string name="question4">When was 1st Android commercial device released?</string>
    <string name="submit">Ok</string>
    <string name="cancel">Cancel</string>
</resources>
